# Comp-AWS-2

./: .env.development  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  CREDENTIALS_RESET.md  Dockerfile  MERMAID_ARCHITECTURE.md  Makefile  README.md  clear_credentials.bat  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements-ml.txt  requirements-test.txt  requirements.txt  start_demo.bat  stop_database.bat
.github/workflows/: ci-cd.yml  comprehensive-testing.yml  e2e-tests.yml
.kiro/steering/: aws competition requirement.md  development-methodology.md  product.md  structure.md  tech.md
config/: cost_monitoring.json  performance_benchmarks.json  security.json
data/: data_sources.json
demo/: demo_environment.json
demo/data/: competition_demo_data.json
demo/presentations/: competition_presentation.json
demo/scenarios/: competition_scenarios.json
docs/api/: openapi.yaml
frontend/: .eslintrc.json  Dockerfile.test  README.md  cypress.config.ts  lighthouse.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json
frontend/.storybook/: main.ts  preview.ts
frontend/playwright/: dashboard.spec.ts
frontend/public/: index.html  manifest.json  view-logs.html
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  react-app-env.d.ts  setupProxy.js  setupTests.ts
infrastructure/: __init__.py  app.py  ecs_config.py
infrastructure/stacks/: __init__.py  riskintel360_stack.py
models/fraud_detection/: metadata.json
riskintel360/: __init__.py  cli.py
riskintel360/agentcore/: fraud_detection_agent.py  kyc_verification_agent.py  market_intelligence_agent.py  orchestrator.py  regulatory_compliance_agent.py  risk_assessment_agent.py
riskintel360/agents/: __init__.py  agent_factory.py  base_agent.py  customer_behavior_intelligence_agent.py  fraud_detection_agent.py  kyc_verification_agent.py  market_analysis_agent.py  prompt_templates.py  regulatory_compliance_agent.py  risk_assessment_agent.py
riskintel360/api/: __init__.py  auth.py  competition_demo.py  config.py  cost_management.py  cost_optimization_endpoints.py  credentials.py  documentation.py  fintech_endpoints.py  health.py  main.py  middleware.py  models.py  performance.py  progress.py  router.py  users.py  validations.py  visualizations.py  websockets.py
riskintel360/auth/: README.md  __init__.py  audit_logger.py  auth_decorators.py  cognito_client.py  dependencies.py  middleware.py  models.py  multi_tenant.py  rbac.py
riskintel360/config/: __init__.py  aws_config.py  environment.py  settings.py
riskintel360/models/: __init__.py  adapters.py  agent_models.py  core.py  database.py  fintech_models.py
riskintel360/services/: __init__.py  agent_communication.py  agent_memory.py  agent_runtime.py  agentcore_client.py  auto_scaling.py  aws_cost_monitor.py  aws_security_integration.py  bedrock_client.py  business_value_calculator.py  caching_service.py  competition_demo.py  compliance_service.py  connection_pool.py  cost_management.py  cost_optimization_dashboard.py  credential_manager.py  external_data_integration_layer.py  monitoring_dashboards.py  monitoring_integration.py  monitoring_service.py  performance_monitor.py  performance_optimizer.py  redis_manager.py  security_compliance_framework.py  security_service.py  (+3 more)
scripts/: clear_credentials.py  deploy.py  deploy_docker.sh  deploy_infrastructure.sh  rollback.py  setup_cognito_users.py  start_development.py  validate_deployment.py
test-results/: load-test-report.json
tests/: __init__.py  conftest.py  test_agent_communication_integration.py  test_agent_memory.py  test_agent_runtime.py  test_agentcore_integration.py  test_api_contracts.py  test_api_endpoints.py  test_api_pytest.py  test_authentication.py  test_authentication_integration.py  test_bedrock_integration.py  test_bedrock_live.py  test_competition_demo.py  test_complete_integration.py  test_containerized_functionality.py  test_cost_management_integration.py  test_credentials_management.py  test_data_storage.py  test_database.py  test_e2e_api_integration.py  test_e2e_backend_workflow.py  test_e2e_customer_journey.py  test_e2e_workflow_integration.py  test_end_to_end_cost_integration.py  test_error_handling.py  test_external_data_integration_layer.py  test_frontend_backend_integration.py  test_frontend_e2e.py  test_infrastructure.py  test_metrics_dashboard.py  test_models.py  test_monitoring.py  test_performance.py  test_pydantic_v2_compliance.py  test_risk_assessment_agent.py  test_security_compliance.py  test_security_comprehensive.py  test_websocket_integration.py  test_workflow_orchestration.py  (+1 more)
(+199 files in other folders)
